--- a/pom.xml.in
+++ b/pom.xml.in
@@ -369,6 +369,11 @@
       <artifactId>asynchbase</artifactId>
       <version>@ASYNCHBASE_VERSION@</version>
     </dependency>
+   
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId> 
+    </dependency>
     
     <dependency>
       <groupId>com.mapr.hadoop</groupId>
