fixed cache patch

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -31,7 +31,7 @@ tsd.http.staticroot = __INSTALL__/share/opentsdb/static/
 
 # Where TSD should write it's cache files to
 # *** REQUIRED ***
-tsd.http.cachedir = /tmp/opentsdb
+tsd.http.cachedir = __INSTALL__/var/cache/opentsdb
 
 # --------- CORE ----------
 # Whether or not to automatically create UIDs for new metric types, default
