updated warden conf with heap params

--- a/ext-conf/warden.opentsdb.conf
+++ b/ext-conf/warden.opentsdb.conf
@@ -9,3 +9,12 @@ service.logs.location=__INSTALL__/var/log/opentsdb
 service.process.type=JAVA
 service.alarm.tersename=naopntsdd
 service.alarm.label=OpenTsdbServerDown
+#  Opentsdb likes a lot of memory 
+#  Also set JVMARGS in $OT_HOME/etc/init.d/opentsdb to match
+#  If you can afford it, allow OT heap to be minimum 6G
+#  Set min=max once you decide what you want it to have
+#  The actual heap size used when invoking a service is a combination of the three parameters according to the formula 
+#      max(heapsize.min, min(heapsize.max, total-memory * heapsize.percent / 100)).
+service.heapsize.percent=15     # parameter controls the percentage of system memory allocated to the named service.
+service.heapsize.max=30G        # parameter defines the maximum heapsize used when invoking the service.
+service.heapsize.min=2G         # parameter defines the minimum heapsize used when invoking the service.
