comment out heap limits for now

--- a/ext-conf/warden.opentsdb.conf
+++ b/ext-conf/warden.opentsdb.conf
@@ -16,9 +16,11 @@ service.alarm.label=OpenTsdbServerDown
 #  The actual heap size used when invoking a service is a combination of the three parameters according to the formula 
 #      max(heapsize.min, min(heapsize.max, total-memory * heapsize.percent / 100)).
 
+#
+# NOTE, If the sum of all the services' memory requirement is more than the machine has, warden will not start up...
 # parameter controls the percentage of system memory allocated to the named service.
-service.heapsize.percent=15
+#service.heapsize.percent=15
 # parameter defines the maximum heapsize used when invoking the service.
-service.heapsize.max=30000
+#service.heapsize.max=30000
 # parameter defines the minimum heapsize used when invoking the service.
-service.heapsize.min=2000
+#service.heapsize.min=2000
