--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -53,12 +53,12 @@ tsd.storage.fix_duplicates = true
 # tsd.storage.flush_interval = 1000
 
 # Name of the HBase table where data points are stored, default is "tsdb"
-tsd.storage.hbase.data_table = /monitoring/tsdb
+tsd.storage.hbase.data_table = /mapr.monitoring/tsdb
 
 # Name of the HBase table where UID information is stored, default is "tsdb-uid"
-tsd.storage.hbase.uid_table = /monitoring/tsdb-uid
+tsd.storage.hbase.uid_table = /mapr.monitoring/tsdb-uid
 
-tsd.storage.hbase.meta_table = /monitoring/tsdb-meta
+tsd.storage.hbase.meta_table = /mapr.monitoring/tsdb-meta
 
 # Path under which the znode for the -ROOT- region is located, default is "/hbase"
 #tsd.storage.hbase.zk_basedir = /hbase
