#SPYG-704 OpenTSDB high meme utilization

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -38,7 +38,7 @@ tsd.http.cachedir = __INSTALL__/var/cache/opentsdb
 # is False
 tsd.core.auto_create_metrics = true
 
-tsd.core.meta.enable_realtime_ts = true
+tsd.core.meta.enable_realtime_ts = false
 
 # Full path to a directory containing plugins for OpenTSDB
 tsd.core.plugin_path = __INSTALL__/share/opentsdb/plugins
