do not start opentsdb util cldb is up

--- a/ext-conf/warden.opentsdb.conf
+++ b/ext-conf/warden.opentsdb.conf
@@ -1,4 +1,4 @@
-services=opentsdb:all:
+services=opentsdb:all:cldb
 service.displayname=OpenTsdb
 service.command.start=__INSTALL__/etc/init.d/opentsdb start
 service.command.stop=__INSTALL__/etc/init.d/opentsdb stop
