--- a/pom.xml.in
+++ b/pom.xml.in
@@ -390,17 +390,29 @@
       <artifactId>asynchbase</artifactId>
       <version>@ASYNCHBASE_VERSION@</version>
     </dependency>
-   
+
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId> 
       <version>@HADOOP_VERSION@</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.mapr.hadoop</groupId>
       <artifactId>maprfs-core</artifactId>
       <version>@MAPR_VERSION@</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mapr.streams</groupId>
+      <artifactId>mapr-streams</artifactId>
+      <version>@MAPR_VERSION@</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>@KAFKA_VERSION@</version>
     </dependency>
 
     <dependency>
@@ -429,7 +441,8 @@
       <version>@LOGBACK_CLASSIC_VERSION@</version>
     </dependency>
 
-    <!-- test dependencies -->
+
+   <!-- test dependencies -->
 
     <dependency>
       <groupId>org.hamcrest</groupId>
