--- a/ext-conf/warden.opentsdb.conf
+++ b/ext-conf/warden.opentsdb.conf
@@ -7,7 +7,7 @@ service.command.type=BACKGROUND
 service.baseservice=1
 service.logs.location=__INSTALL__/var/log/opentsdb
 service.process.type=JAVA
-ervice.ui.port=4242
+service.ui.port=4242
 service.alarm.tersename=naopntsdd
 service.alarm.label=OpenTsdbServerDown
 #  Opentsdb likes a lot of memory 
