--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -40,6 +40,8 @@ tsd.core.auto_create_metrics = true
 
 tsd.core.meta.enable_realtime_ts = true
 
+tsd.core.meta.enable_tsuid_tracking = true
+
 # Full path to a directory containing plugins for OpenTSDB
 tsd.core.plugin_path = __INSTALL__/share/opentsdb/plugins
 
