--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -36,6 +36,8 @@ tsd.http.cachedir = __INSTALL__/var/cache/opentsdb
 # --------- CORE ----------
 # Whether or not to automatically create UIDs for new metric types, default
 # is False
+tsd.core.enable_ui = false
+
 tsd.core.auto_create_metrics = true
 
 tsd.core.meta.enable_realtime_ts = true
