--- a/src/opentsdb.conf
+++ b/src/opentsdb.conf
@@ -69,7 +69,7 @@ tsd.http.cachedir =
 # port specifiers, default is "localhost"
 #tsd.storage.hbase.zk_quorum = localhost
 
-#tsd.default.stream=/var/mapr/mapr.monitoring/1854984825002990623
+#tsd.streams=stream1,stream2
 #tsd.default.consumergroup=metrics
 #tsd.default.usestreams = true
 
