--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -70,3 +70,8 @@ tsd.storage.hbase.meta_table = /var/mapr/mapr.monitoring/tsdb-meta
 # A space separated list of Zookeeper hosts to connect to, with or without
 # port specifiers, default is "localhost"
 tsd.storage.hbase.zk_quorum = 10.10.88.98:5181
+
+# Config to enable reading from streams
+tsd.default.usestreams = false
+#tsd.default.consumergroup = metrics
+#tsd.streams = stream1,stream2 
