OTSDB-3 - set readonly flag when collectd is configured to use streams to write metrics

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -74,4 +74,5 @@ tsd.storage.hbase.zk_quorum = 10.10.88.98:5181
 # Config to enable reading from streams
 tsd.default.usestreams = false
 #tsd.default.consumergroup = metrics
-#tsd.streams = stream1,stream2 
+#tsd.streams = stream1,stream2
+#tsd.mode = ro
