--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -74,5 +74,5 @@ tsd.storage.hbase.zk_quorum = 10.10.88.98:5181
 # Config to enable reading from streams
 tsd.default.usestreams = false
 #tsd.default.consumergroup = metrics
-#tsd.streams = stream1,stream2
+#tsd.streams = /var/mapr/mapr.monitoring/metricsstream
 #tsd.mode = ro
