OTSDB-18 add USE_MAPR_SNAPSHOTS to AC_CONDITIOINALS

--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ AC_CONFIG_FILES([
 ])
 AC_CONFIG_FILES([opentsdb.spec])
 AC_CONFIG_FILES([build-aux/fetchdep.sh], [chmod +x build-aux/fetchdep.sh])
+AM_CONDITIONAL(USE_MAPR_SNAPSHOT, true)
 
 AC_ARG_WITH([bigtable],
             [AS_HELP_STRING([--with-bigtable], [Enable Google's Bigtable backend])],
