--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -75,4 +75,6 @@ tsd.storage.hbase.zk_quorum = 10.10.88.98:5181
 tsd.default.usestreams = false
 #tsd.default.consumergroup = metrics
 #tsd.streams.path = /var/mapr/mapr.monitoring/streams
+#tsd.streams.consumer.memory = 2097152
+#tsd.streams.count = 64
 #tsd.mode = ro
