#SPYG-921 Increase Streams autocommit interval to higher number as gets performance is affected

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -77,4 +77,5 @@ tsd.default.usestreams = false
 #tsd.streams.path = /var/mapr/mapr.monitoring/streams
 #tsd.streams.consumer.memory = 4194304
 #tsd.streams.count = 2
+#tsd.streams.autocommit.interval = 60000
 #tsd.mode = ro
