bug 29532 limit spyglass memory

--- a/ext-conf/warden.opentsdb.conf
+++ b/ext-conf/warden.opentsdb.conf
@@ -22,6 +22,6 @@ service.alarm.label=OpenTsdbServerDown
 # parameter controls the percentage of system memory allocated to the named service.
 #service.heapsize.percent=15
 # parameter defines the maximum heapsize used when invoking the service.
-#service.heapsize.max=30000
+service.heapsize.max=2000
 # parameter defines the minimum heapsize used when invoking the service.
-#service.heapsize.min=2000
+service.heapsize.min=2000
