--- a/ext-conf/warden.opentsdb.conf
+++ b/ext-conf/warden.opentsdb.conf
@@ -20,8 +20,8 @@ service.alarm.label=OpenTsdbServerDown
 #
 # NOTE, If the sum of all the services' memory requirement is more than the machine has, warden will not start up...
 # parameter controls the percentage of system memory allocated to the named service.
-#service.heapsize.percent=15
+service.heapsize.percent=15
 # parameter defines the maximum heapsize used when invoking the service.
-#service.heapsize.max=30000
+service.heapsize.max=2000
 # parameter defines the minimum heapsize used when invoking the service.
-#service.heapsize.min=2000
+service.heapsize.min=2000
