#SPYG-1007 Change topic design for spyglass on streams

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -74,8 +74,8 @@ tsd.storage.hbase.zk_quorum = 10.10.88.98:5181
 # Config to enable reading from streams
 tsd.default.usestreams = false
 #tsd.default.consumergroup = metrics
-#tsd.streams.path = /var/mapr/mapr.monitoring/streams
+#tsd.streams.path = /var/mapr/mapr.monitoring/metricstreams
 #tsd.streams.consumer.memory = 4194304
-#tsd.streams.count = 2
+#tsd.streams.count = 1
 #tsd.streams.autocommit.interval = 60000
 #tsd.mode = ro
