--- a/Makefile.am
+++ b/Makefile.am
@@ -173,6 +173,7 @@ tsdb_SRC := \
 	src/tools/Search.java	\
 	src/tools/StartupPlugin.java \
 	src/tools/StreamsConsumer.java	\
+	src/tools/StreamsConsumer2.java	\
 	src/tools/TSDMain.java	\
 	src/tools/TextImporter.java	\
 	src/tools/TreeSync.java	\
