--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -71,6 +71,8 @@ tsd.storage.hbase.meta_table = /var/mapr/mapr.monitoring/tsdb-meta
 # port specifiers, default is "localhost"
 tsd.storage.hbase.zk_quorum = 10.10.88.98:5181
 
+#Enable histograms
+tsd.core.histograms.config =  {\"net.opentsdb.core.SimpleHistogramDecoder\": 0}
 # Config to enable reading from streams
 tsd.default.usestreams = false
 #tsd.default.consumergroup = metrics
