OTSDB-63 allow spaces in tags

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -82,3 +82,4 @@ tsd.default.usestreams = false
 #tsd.streams.count = 2
 #tsd.streams.autocommit.interval = 60000
 #tsd.mode = ro
+tsd.core.tag.allow_specialchars = ' '
