OTSDB-70 enable http chunking

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -82,4 +82,6 @@ tsd.default.usestreams = false
 #tsd.streams.count = 3
 #tsd.streams.autocommit.interval = 60000
 #tsd.mode = ro
+tsd.http.request.enable_chunked=true
+tsd.http.request.max_chunk=65536
 tsd.core.tag.allow_specialchars = ' '
