OTSDB-68 change metadata update config to improve performance

--- a/ext-conf/opentsdb.conf
+++ b/ext-conf/opentsdb.conf
@@ -40,7 +40,7 @@ tsd.core.enable_ui = false
 
 tsd.core.auto_create_metrics = true
 
-tsd.core.meta.enable_realtime_ts = true
+tsd.core.meta.enable_realtime_uid = true
 
 tsd.core.meta.enable_tsuid_tracking = true
 
