--- a/pom.xml.in
+++ b/pom.xml.in
@@ -455,6 +455,17 @@
       <artifactId>kryo</artifactId>
       <version>2.21.1</version>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>@JAXB_API_VERSION@</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>@JAXB_RUNTIME_VERSION@</version>
+    </dependency>
 
     <!-- runtime dependencies -->
 
