SPYG-1122: purge the metrics stream(s) periodically to remove TTLed data points

--- a/Makefile.am
+++ b/Makefile.am
@@ -177,6 +177,7 @@ tsdb_SRC := \
 	src/tools/StartupPlugin.java \
 	src/tools/StreamsConsumer.java	\
 	src/tools/StreamsConsumer2.java	\
+	src/tools/StreamsPurger.java	\
 	src/tools/TSDMain.java	\
 	src/tools/TextImporter.java	\
 	src/tools/TreeSync.java	\
